--- a/tkj.html
+++ b/tkj.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="tkj.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Teknik Komputer Jaringan</title>
 </head>
 <body>
     <div class="banner">
